HW5 done